Fix integration tests and add auto-generated IDs for entities
Applied multiple improvements:
- Entity classes (User, Term, News): added @GeneratedValue(strategy = GenerationType.IDENTITY) to enable auto-generated IDs for proper test execution.
- NewsServiceImplIntegrationTest: removed manual ID setting, let Hibernate auto-generate IDs to fix IdentifierGenerationException.
- application-test.yml: fixed YAML structure by moving liquibase config to correct indentation level, added bean override support.
- TestSecurityConfig: resolved bean definition conflicts by allowing overriding in test configuration.
Integration tests now pass successfully with proper entity persistence and security configuration isolation.